--- a/package.json
+++ b/package.json
@@ -1,5 +1,50 @@
 {
+  "name": "Proyecto-Disenio-Interfaces",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0"
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.9",
+    "@mui/material": "^6.1.0",
+    "@mui/styles": "^6.1.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "@mui/x-date-pickers-pro": "^7.17.0",
+    "@react-google-maps/api": "^2.19.3",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "react": "^18.3.1",
+    "react-country-state-city": "^1.1.3",
+    "react-datepicker": "^7.3.0",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
